[gd_scene load_steps=15 format=3 uid="uid://lk1vqq6fhqj0"]

[ext_resource type="Script" uid="uid://cnw08k3snnn5k" path="res://Script/silver_chest.gd" id="1_p26g8"]
[ext_resource type="Texture2D" uid="uid://cmexvl740ihcf" path="res://Assets/Tileset/PNG/doors_lever_chest_animation.png" id="2_p26g8"]
[ext_resource type="FontFile" uid="uid://cpmtt72gu4l38" path="res://Assets/Font/Pixels.ttf" id="3_wx0bj"]
[ext_resource type="AudioStream" uid="uid://2o6b2u5i0f4s" path="res://Assets/Audio/chest-open.ogg" id="4_x8474"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8474"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p26g8"]
atlas = ExtResource("2_p26g8")
region = Rect2(7, 132, 19, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx0bj"]
atlas = ExtResource("2_p26g8")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8474"]
atlas = ExtResource("2_p26g8")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b067n"]
atlas = ExtResource("2_p26g8")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kawk"]
atlas = ExtResource("2_p26g8")
region = Rect2(128, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t81yx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx0bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8474")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b067n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kawk")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t81yx"]
atlas = ExtResource("2_p26g8")
region = Rect2(135, 129, 19, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx0bj"]
size = Vector2(25.5, 28.625)

[sub_resource type="LabelSettings" id="LabelSettings_b067n"]
font = ExtResource("3_wx0bj")

[node name="SilverChest" type="StaticBody2D"]
script = ExtResource("1_p26g8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x8474")

[node name="silver_chest" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_p26g8")

[node name="silver_chest_openanimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.5, 3)
scale = Vector2(0.96875, 1)
sprite_frames = SubResource("SpriteFrames_t81yx")
animation = &"open"
frame = 3
frame_progress = 1.0

[node name="silver_chest_open" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = SubResource("AtlasTexture_t81yx")

[node name="Area2D" type="Area2D" parent="."]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.6875)
shape = SubResource("RectangleShape2D_wx0bj")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -53.0
offset_right = 18.0
offset_bottom = 12.0
text = "Press 'e' to open"
label_settings = SubResource("LabelSettings_b067n")

[node name="SFX_ChestOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x8474")
volume_db = 11.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
